syntax = "proto3";

option java_package = "neo.proto";
option java_multiple_files = true;

service NameService {
  rpc Search(SearchRequest) returns (SearchResponse) {};
}

message SearchRequest {
  string query = 1;
}

message SearchResponse {
  repeated SearchResult results = 1;
}

message SearchResult {
  string name = 1;
  string context = 2;
}


service HealthCheckService {
  rpc Ping(PingRequest) returns (PingResponse) {};
}

message PingRequest {
  string text = 1;
}

message PingResponse {
  string text = 1;
}
